--- a/media/davewhipp-screen.css
+++ b/media/davewhipp-screen.css
@@ -187,7 +187,13 @@ strong {
 	display: none;
 }
 
-
+ul.a {
+	list-style-type: circle;
+  }
+  
+ul.b {
+	list-style-type: square;
+  }
 
 /*
 @media only screen and (max-width: 480px) {
