--- a/media/davewhipp-screen.css
+++ b/media/davewhipp-screen.css
@@ -32,7 +32,7 @@ body {
 	line-height: 1;
 }
 ol, ul {
-	list-style: none;
+	list-style: circle;
 }
 blockquote, q {
 	quotes: none;
@@ -112,6 +112,7 @@ li ul {
 	width: 100%;
 	margin-top: 0.25em;
 }
+
 
 h1,h2,h3,h4 {
 	font-weight: 400;
