remove second line indent

--- a/media/davewhipp-screen.css
+++ b/media/davewhipp-screen.css
@@ -32,7 +32,7 @@ body {
 	line-height: 1;
 }
 ol, ul {
-	list-style: circle;
+	list-style: inside;
 }
 blockquote, q {
 	quotes: none;
@@ -99,10 +99,11 @@ ul {
 	left: -0.25em;
 }*/
 
+
 li {
 	/*second line indent*/
 	padding-left: 1.25em;
-	text-indent: -1.25em;
+	text-indent: 0em;
 	/*color: #777;*/
 }
 
