--- a/media/davewhipp-screen.css
+++ b/media/davewhipp-screen.css
@@ -34,6 +34,14 @@ body {
 ol, ul {
 	list-style: inside;
 }
+
+ul ul {
+	list-style: circle;
+}
+
+ol ol {
+	list-style: circle;
+}
 blockquote, q {
 	quotes: none;
 }
