--- a/media/davewhipp-screen.css
+++ b/media/davewhipp-screen.css
@@ -157,7 +157,7 @@ h3 {
 
 a {
 	color: inherit;
-	/*text-decoration:none*/
+	text-decoration:underline
 }
 
 a:hover {
@@ -202,3 +202,23 @@ ul.b {
 @media only screen and (max-width: 480px) {
 	make one column somehow...
 }*/
+
+/* unvisited link */
+a:link {
+	color: rgb(43, 0, 255);
+  }
+  
+  /* visited link */
+  a:visited {
+	color: green;
+  }
+  
+  /* mouse over link */
+  a:hover {
+	color: hotpink;
+  }
+  
+  /* selected link */
+  a:active {
+	color: blue;
+  }
