col of hyperlink

--- a/media/davewhipp-print.css
+++ b/media/davewhipp-print.css
@@ -160,7 +160,7 @@ a {
 }
 
 a:hover {
-	color:#39f
+	color:rgb(16, 25, 108)
 }
 
 #webaddress {
@@ -190,23 +190,4 @@ strong {
 	visibility: hidden;
 }
 
-/* unvisited link */
-a:link {
-	color: rgb(43, 0, 255);
-  }
-  
-  /* visited link */
-  a:visited {
-	color: green;
-  }
-  
-  /* mouse over link */
-  a:hover {
-	color: hotpink;
-  }
-  
-  /* selected link */
-  a:active {
-	color: blue;
-  }
 
