--- a/media/davewhipp-print.css
+++ b/media/davewhipp-print.css
@@ -139,8 +139,8 @@ table {
 
 body {
 	font: normal normal 400;
-	font-size: 12pt;
-	line-height: 1.35em;
+	font-size: 14pt;
+	line-height: 1.25em;
 	/*also written as...  font: normal normal 400 100%/1.5em;*/
 	font-family: Avenir, Verdana, sans-serif;
 	/*margin-top: 1em;
@@ -149,32 +149,34 @@ body {
 
 p {
 	position: relative;
-	left: 20%;
-	margin-bottom: 0.2em;
+	left: 15%;
+	margin-bottom: 0.5em;
 	margin-right: 0;
-	width: 70%;
+	width: 80%;
 }
 
 code {
 	font: normal normal;
-	font-size: 90%;
+	font-size: 100%;
 	/*line-height: 1em;*/
 	font-family: Monaco, Menlo, monospace, sans-serif;
-	color: #ccc;
+	color: #cccccc72;
 }
 
 p code {
 	position: absolute;
+	width: 5%;
 	text-align: right;
-	right: -20%;
+	right: -3.5%;
+	color: #06000072;
 }
 
 
 ul {
 	position: relative;
-	left: 10%;
-	width: 75%;
-	margin-bottom: 1em;
+	left: 17%;
+	width: 70%;
+	margin-bottom: 0.75em;
 	list-style-position: outside;
 	/*margin-top: -0.5em;*/
 }
@@ -197,7 +199,7 @@ li ul {
 	position: relative;
 	left: 0;
 	width: 100%;
-	margin-top: 0.25em;
+	margin-top: 0.35em;
 	list-style: square inside;
 }
 
@@ -211,22 +213,29 @@ h4 {
 }
 
 h1 {
-	text-align: left;
+	/*title: Full Name */
+	text-align: center;
+	left: 1.5em;
 	font-size: 3em;
+	font-weight: 600;
 	line-height: 1em;
 	position: relative;
-	left: 15%;
+	margin-top: 1.25em;
 }
 
 h1+p {
-	/*subtitle*/
+	/*subtitle: contact info, etc*/
 	font-style: italic;
-	font-size: 110%;
+	font-size: 100%;
+	position: relative;
+	top: 0.5em;
+	text-align: center;
 }
 
 h2 {
+	/*section name, e.g. Summary etc*/
 	font-size: 1.1em;
-	color: #a00;
+	color: rgb(170, 0, 0);
 	margin-top: 2em;
 	position: relative;
 	top: 1.2em;
@@ -236,13 +245,14 @@ h2 {
 
 
 h3 {
+	/*sub-section name, here used to for programming languages*/
 	font-size: 1em;
 	line-height: 2em;
-	color: #ccc;
+	color: #282626;
 	position: relative;
 	top: 1.6em;
-	text-align: right;
-	width: 20%;
+	text-align: center;
+	width: 15%;
 }
 
 a {
@@ -266,10 +276,10 @@ a:visited {
 #webaddress {
 	margin-top: 1em;
 	position: relative;
-	left: 25%;
+	left: 35%;
 	color: #ccc;
 	font-family: Monaco, Menlo, monospace, sans-serif;
-	font-size: 90%;
+	font-size: 100%;
 }
 
 #webaddress a {
@@ -278,7 +288,7 @@ a:visited {
 
 em {
 	font-style: normal;
-	color: #2d4e5e
+	color: #000000
 }
 
 strong {
