--- a/media/davewhipp-screen.css
+++ b/media/davewhipp-screen.css
@@ -3,19 +3,87 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -23,26 +91,44 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
 	display: block;
 }
+
 body {
-	line-height: 1;
+	line-height: 1.25;
 }
-ol, ul {
+
+ol,
+ul {
 	list-style: inside;
 }
 
-blockquote, q {
+blockquote,
+q {
 	quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
 	content: '';
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
@@ -57,39 +143,40 @@ body {
 	font-size: 100%;
 	line-height: 1.5em;
 	/*also written as...  font: normal normal 400 100%/1.5em;*/
-	font-family: Avenir,Verdana,sans-serif;
+	font-family: Avenir, Verdana, sans-serif;
 	margin-top: 1em;
 	margin-left: 1em;
 }
 
 p {
 	position: relative;
-	left: 25%;
+	left: 15%;
 	margin-bottom: 0.7em;
 	margin-right: 0;
-	width: 55%;
+	width: 65%;
 }
 
 code {
 	font: normal normal;
-	font-size: 90%;
+	font-size: 100%;
 	/*line-height: 1em;*/
-	font-family: Monaco,Menlo,monospace,sans-serif;
+	font-family: Monaco, Menlo, monospace, sans-serif;
 	color: #aaa;
 }
 
 p code {
 	position: absolute;
+	width: 5%;
 	text-align: right;
-	right: -20%;
+	right: -21%;
 }
 
 
 ul {
 	position: relative;
-	left: 25%;
-	width: 75%;
-	margin-bottom: 1.5em;
+	left: 15%;
+	width: 70%;
+	margin-bottom: 0.75em;
 	margin-top: -0.5em;
 }
 
@@ -112,19 +199,24 @@ li ul {
 	position: relative;
 	left: 0;
 	width: 100%;
-	margin-top: 0.25em;
+	margin-top: 0.35em;
+	list-style: square inside;
 }
 
 
-h1,h2,h3,h4 {
+h1,
+h2,
+h3,
+h4 {
 	font-weight: 400;
-	font-family: Avenir,Cousine,Verdana,sans-serif;
+	font-family: Avenir, Cousine, Verdana, sans-serif;
 	width: 80%;
 }
 
 h1 {
 	text-align: left;
 	font-size: 3em;
+	font-weight: 600;
 	line-height: 1em;
 	position: relative;
 	left: 25%;
@@ -134,6 +226,10 @@ h1+p {
 	/*subtitle*/
 	font-style: italic;
 	font-size: 110%;
+	position: relative;
+	top: 0.5em;
+	left: 25%;
+	text-align: left;
 }
 
 h2 {
@@ -143,43 +239,44 @@ h2 {
 	position: relative;
 	top: 1.4em;
 	text-align: right;
-	width: 20%;
+	width: 10%;
 }
 
 h3 {
 	font-size: 1em;
 	line-height: 2em;
 	position: relative;
-	top: 1.7em;
-	text-align: right;
-	width: 20%;
+	top: 1.6em;
+	text-align: center;
+	width: 14%;
 }
 
 a {
 	color: inherit;
-	text-decoration:underline
+	text-decoration: underline
 }
 
 a:hover {
-	color:rgb(16, 25, 108)
+	color: rgb(16, 25, 108)
 }
 
 a:link {
-	color:rgb(16, 25, 108)
-  }
-  
+	color: rgb(16, 25, 108)
+}
+
 /* visited link */
 a:visited {
-	color: rgb(166, 14, 123)
-  }
-  
+	color: rgb(16, 25, 108)
+}
+
 
 #webaddress {
+	display: block;
 	margin-top: 1em;
 	position: relative;
 	left: 25%;
 	color: #bc412b;
-	font-family: Monaco,Menlo,monospace,sans-serif;
+	font-family: Monaco, Menlo, monospace, sans-serif;
 	font-size: 100%;
 }
 
@@ -200,21 +297,12 @@ strong {
 	display: none;
 }
 
-ul.a {
-	list-style-type: circle;
-  }
-  
-ul.b {
-	list-style-type: square;
-  }
-
-.img{
-    float: left;
-    margin-right:1rem;
+.img {
+	float: left;
+	margin-right: 1rem;
 }
 
 /*
 @media only screen and (max-width: 480px) {
 	make one column somehow...
 }*/
-
